--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,7 +12,8 @@
     "dev": "npx vite"
   },
   "dependencies": {
-    "@calpoly/mustang": "^1.0.15",
-    "lit": "^3.3.0"
+    "@calpoly/mustang": "^0.1.13",
+    "lit": "^3.3.0",
+    "server": "^1.0.0"
   }
 }
