--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,10 @@
   "dependencies": {
     "@calpoly/mustang": "^0.1.13",
     "lit": "^3.3.0",
-    "server": "^1.0.0"
+    "server": "^1.0.0",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^10.0.0"
   }
 }
